feat: 除目标和报表外全部完成

--- a/apply/apply-success.html
+++ b/apply/apply-success.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../components/head-iframe.html?__inline">
+<link rel="import" href="../components/head.html?__inline">
 
 <div class="container margin-top-15">
 	<div class="panel panel-success">
@@ -19,4 +19,4 @@
 	});
 </script>
 
-<link rel="import" href="../components/foot-iframe.html?__inline">
+<link rel="import" href="../components/foot.html?__inline">
