--- a/menshi/mine-info.html
+++ b/menshi/mine-info.html
@@ -1,9 +1,1 @@
-<link rel="import" href="../components/head-iframe.html?__inline">
-
-  Info 未知界面
-
-<script>
-	iframe.init();
-</script>
-
-<link rel="import" href="../components/foot-iframe.html?__inline">
+<link rel="import" href="../components/mine-info.html?__inline">
