--- a/menshi/operate-dingdan.html
+++ b/menshi/operate-dingdan.html
@@ -1,29 +1,39 @@
-<link rel="import" href="../components/head-iframe.html?__inline">
+<link rel="import" href="../components/head.html?__inline">
 
 <div class="container">
 	<div class="panel panel-primary">
 		<div class="panel-body">
 			<div class="operate-message">
-				<form action="list.html" class="form-horizontal form" role="form">
+				<form id="form" action="" class="form-horizontal form" role="form">
 					<div class="msg">订单</div>
 					<div class="form-group">
-						<label class="col-xs-12 control-label left">选择付款方式</label>
-						<div class="col-xs-6">
-							<input type="text" class="form-control" placeholder="产品的类别">
-						</div>
-						<div class="col-xs-6">
-							<input type="text" class="form-control" placeholder="需要金额">
-						</div>
-					</div>
+            <label class="col-xs-12 control-label left">产品套系</label>
+            <div class="col-xs-12">
+              <input name="relation" type="text" class="form-control">
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="call" class="col-xs-12 control-label left">选择付款方式</label>
+            <div class="col-xs-12">
+              <select name="pay_type" class="form-control">
+                <option value="1">全款</option>
+                <option value="2">订单定金</option>
+                <option value="3">预付款</option>
+              </select>
+            </div>
+          </div>
 					<div class="form-group">
-						<label for="call" class="col-xs-4 control-label left">支付金额</label>
+						<label class="col-xs-4 control-label left">支付金额</label>
 						<div class="col-xs-12">
-							<input type="text" class="form-control" placeholder="支付的金额">
+							<input name="pay_money" type="text" class="form-control">
 						</div>
 					</div>
-					<div class="operate col-xs-10 col-xs-offset-1">
-						<input type="submit" class="btn btn-default btn-block" value="保存，返回客资列表">
+					<div class="operate col-xs-5 col-xs-offset-1">
+						<a href="javascript:;" class="btn btn-default btn-block btn-submit" data-type="save">保存返回</a>
 					</div>
+          <div class="operate col-xs-5">
+            <a href="javascript:;" class="btn btn-warning btn-block btn-submit" data-type="commit">已完成订单</a>
+          </div>
 				</form>
 			</div>
 		</div>
@@ -34,4 +44,56 @@
 	iframe.init();
 </script>
 
-<link rel="import" href="../components/foot-iframe.html?__inline">
+<script>
+  var uuid = request.getParam('id');
+
+  // 获取初始化数据
+  api.getObject('BusCustomer', uuid, function(data){
+    if(data.retMsg == 'OK'){
+      var obj = data.retVal;
+      $('input[name=relation]').val(obj.type_name);
+      $('select[name=pay_type]').val(obj.pay_type);
+      $('input[name=pay_money]').val(obj.paid);
+    }else{
+      alert(data.retMsg);
+    }
+  });
+
+  // 表单提交
+  function formCommit(isCommit){
+    // 表单提交
+    var params = {};
+    // 表单数据
+    params['type_name'] = $('input[name=relation]').val();
+    params['pay_type'] = $('select[name=pay_type]').val()?$('select[name=pay_type]').val():'';
+    params['paid'] = $('input[name=pay_money]').val();
+    // 额外数据
+    params['uuid'] = uuid;
+    params['mstime'] = new Date().getTime();
+    // submit 方式
+    if(isCommit){
+      params['customer_user_status'] = 9;
+    }
+    // 调用接口
+    api.saveObject('BusCustomer', params, function(data){
+      console.log(data);
+      if(data.retMsg == 'OK'){
+        api.goBack();
+      }else{
+        alert(data.retMsg);
+      }
+    });
+  }
+
+  // 点击提交事件
+  $('.btn-submit').click(function(){
+    if($(this).data('type') == 'commit'){
+      formCommit(true);
+    }else{
+      formCommit(false);
+    }
+  });
+  
+</script>
+
+<link rel="import" href="../components/foot.html?__inline">
