--- a/menshi/operate-gaiqi.html
+++ b/menshi/operate-gaiqi.html
@@ -1,28 +1,31 @@
-<link rel="import" href="../components/head-iframe.html?__inline">
+<link rel="import" href="../components/head.html?__inline">
+
+<link rel="import" href="../components/link-datepicker-head.html?__inline">
 
 <div class="container">
 	<div class="panel panel-primary">
 		<div class="panel-body">
 			<div class="operate-message">
-				<form action="list.html" class="form-horizontal form" role="form">
+				<form id="form" action="" class="form-horizontal form" role="form">
 					<div class="msg">改期</div>
 					<div class="form-group">
 						<label class="col-xs-12 control-label left">改新的到店时间</label>
 						<div class="col-xs-6">
-							<input type="text" class="form-control" placeholder="选择日期">
-						</div>
+              <input name="picker_change_date" type="text" class="form-control datepicker" placeholder="选择日期" readonly="readonly">
+              <input name="change_date" type="hidden">
+            </div>
             <div class="col-xs-6">
-							<input type="text" class="form-control" placeholder="填写具体日期">
-						</div>
+              <input type="text" name="change_time" class="form-control" placeholder="填写具体时间">
+            </div>
 					</div>
           <div class="form-group">
 						<label for="call" class="col-xs-4 control-label left">改期原因</label>
 						<div class="col-xs-12">
-							<textarea class="form-control" rows="3"></textarea>
+							<textarea name="change_reason" class="form-control" rows="3"></textarea>
 						</div>
 					</div>
 					<div class="operate col-xs-10 col-xs-offset-1">
-						<input type="submit" class="btn btn-default btn-block" value="保存，返回客资列表">
+						<input type="submit" class="btn btn-default btn-block" value="保存返回">
 					</div>
 				</form>
 			</div>
@@ -30,8 +33,79 @@
 	</div>
 </div>
 
+<link rel="import" href="../components/link-datepicker-foot.html?__inline">
+
 <script>
 	iframe.init();
 </script>
 
-<link rel="import" href="../components/foot-iframe.html?__inline">
+<script>
+  var uuid = request.getParam('id');
+
+  // 获取初始化数据
+  api.getObject('BusCustomer', uuid, function(data){
+    if(data.retMsg == 'OK'){
+      var obj = data.retVal;
+      $('input[name=picker_change_date]').val(api.getFormatDate(obj.change_shop_date, "yyyy-MM-dd"));
+      $('input[name=change_date]').val(obj.change_shop_date);
+      $('input[name=change_time]').val(obj.str_change_shop_date);
+      $('textarea[name=change_reason]').val(obj.change_date_reason);
+    }else{
+      alert(data.retMsg);
+    }
+  });
+
+  $('#form').bootstrapValidator({
+    // live: 'disabled',
+    fields: {
+      change_date: {
+        validators: {
+          notEmpty: {
+            message: '到店时间不能为空'
+          }
+        }
+      },
+      change_time: {
+        validators: {
+          notEmpty: {
+            message: '到店时间不能为空'
+          }
+        }
+      },
+      change_reason: {
+        validators: {
+          notEmpty: {
+            message: '改期原因不能为空'
+          }
+        }
+      },
+    },
+    submitHandler: function(validator, form, submitButton) {
+      commitForm();
+    }
+  });
+
+  // 表单提交
+  function commitForm(){
+    var params = {};
+    // 表单数据
+    params['change_shop_date'] = $('input[name=change_date]').val();
+    params['str_change_shop_date'] = $('input[name=change_time]').val();
+    params['change_date_reason'] = $('textarea[name=change_reason]').val();
+    // 额外数据
+    params['uuid'] = uuid;
+    params['mstime'] = new Date().getTime();
+    params['customer_user_status'] = 7;
+    // 调用接口
+    api.saveObject('BusCustomer', params, function(data){
+      if(data.retMsg == 'OK'){
+        api.goBack();
+      }else{
+        alert(data.retMsg);
+      }
+    });
+  }
+</script>
+
+
+<link rel="import" href="../components/foot.html?__inline">
