--- a/yaoyue/operate-zhifu.html
+++ b/yaoyue/operate-zhifu.html
@@ -1,29 +1,37 @@
-<link rel="import" href="../components/head-iframe.html?__inline">
+<link rel="import" href="../components/head.html?__inline">
 
 <div class="container">
   <div class="panel panel-primary">
 		<div class="panel-body">
 			<div class="operate-message">
-				<form action="list.html" class="form-horizontal form" role="form">
+				<form id="form" action="" class="form-horizontal form" role="form">
 					<div class="msg">支付</div>
           <div class="form-group">
 						<label for="call" class="col-xs-12 control-label left">选择付款方式</label>
 						<div class="col-xs-12">
-							<select class="form-control">
-                <option>订单定金</option>
-                <option>预付款</option>
+							<select name="pay_type" class="form-control">
+                <option value="1">全款</option>
+                <option value="2">订单定金</option>
+                <option value="3">预付款</option>
               </select>
 						</div>
 					</div>
 					<div class="form-group">
 						<label class="col-xs-12 control-label left">支付金额</label>
 						<div class="col-xs-12">
-							<input type="text" class="form-control">
+							<input name="pay_money" type="text" class="form-control">
 						</div>
 					</div>
+          <div class="form-group">
+            <label for="call" class="col-xs-12 control-label left">选择下发店面和门市</label>
+            <div class="col-xs-12">
+              <select name="workcenter_id"  class="form-control">
+              </select>
+            </div>
+          </div>
           
 					<div class="operate col-xs-10 col-xs-offset-1">
-						<input type="submit" class="btn btn-default btn-block" value="保存，返回客资列表">
+						<input type="submit" class="btn btn-default btn-block" value="保存返回">
 					</div>
 				</form>
 			</div>
@@ -35,4 +43,75 @@
 	iframe.init();
 </script>
 
-<link rel="import" href="../components/foot-iframe.html?__inline">
+<script>
+  var uuid = request.getParam('id'),
+      msdepartmentId;
+  // 部门
+  api.listIdAndName('SysDepartment', {
+    company_id: api.userInfo.companyId,
+    group_flag: 3,
+  }, function(list){
+    msdepartmentId = list[0].uuid;
+    // 工作组
+    api.listIdAndName('SysWorkCenter', {
+      department_id: msdepartmentId
+    }, function(options){
+      $('select[name=workcenter_id]').html(options);
+    });
+  }, false);
+
+  $('#form').bootstrapValidator({
+    // live: 'disabled',
+    fields: {
+      pay_type: {
+        validators: {
+          notEmpty: {
+            message: '付款方式不能为空'
+          }
+        }
+      },
+      pay_money: {
+        validators: {
+          notEmpty: {
+            message: '支付金额不能为空'
+          }
+        }
+      },
+      workcenter_id: {
+        validators: {
+          notEmpty: {
+            message: '下发门市不能为空'
+          }
+        }
+      },
+    },
+    submitHandler: function(validator, form, submitButton) {
+      commitForm();
+    }
+  });
+
+  // 表单提交
+  function commitForm(){
+    var params = {};
+    // 表单数据
+    params['pay_type'] = $('select[name=pay_type]').val();//TODO
+    params['paid'] = $('input[name=pay_money]').val();//TODO
+    params['msworkcenter_id'] = $('select[name=workcenter_id]').val();
+    // 额外数据
+    params['uuid'] = uuid;
+    params['yytime'] = new Date().getTime();
+    params['msdepartment_id'] = msdepartmentId;
+    params['customer_user_status'] = 5;
+    params['valid_flag'] = 1;
+    // 调用接口
+    api.saveObject('BusCustomer', params, function(data){
+      if(data.retMsg == 'OK'){
+        api.goBack();
+      }else{
+        alert(data.retMsg);
+      }
+    });
+  }
+</script>
+
+<link rel="import" href="../components/foot.html?__inline">
