--- a/zhuake/add-success.html
+++ b/zhuake/add-success.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../components/head-iframe.html?__inline">
+<link rel="import" href="../components/head.html?__inline">
 
 <div class="container">
   <div class="map-head"><span class="vertical-line"></span>新增客资</div>
@@ -34,4 +34,4 @@
 	$('#return-update').attr('href', returnUpdateUrl);
 </script>
 
-<link rel="import" href="../components/foot-iframe.html?__inline">
+<link rel="import" href="../components/foot.html?__inline">
