--- a/zhuake/mine-data.html
+++ b/zhuake/mine-data.html
@@ -1,6 +1,6 @@
-<link rel="import" href="../components/head-iframe.html?__inline">
+<link rel="import" href="../components/head.html?__inline">
 
-<p>抓客客资统计</p>
+<p>抓客客资统计(暂未完成)</p>
 <div class="btn-group btn-group-justified margin-top-10">
 	<a href="javascript:;" class="btn btn-primary date-filter-btn" data-date="today">今日</a>
 	<a href="javascript:;" class="btn btn-default date-filter-btn" data-date="this-week">本周</a>
@@ -10,7 +10,6 @@
 	<tbody>
 		<tr>
 			<td></td>
-			<td>部门总客资</td>
 			<td>我的客资数</td>
 			<td>有效客资数</td>
 			<td>客资有效率</td>
@@ -22,7 +21,6 @@
 			<td></td>
 			<td></td>
 			<td></td>
-			<td></td>
 		</tr>
 		<tr>
 			<td>目标</td>
@@ -30,11 +28,9 @@
 			<td></td>
 			<td></td>
 			<td></td>
-			<td></td>
 		</tr>
 		<tr>
 			<td>达成率</td>
-			<td></td>
 			<td></td>
 			<td></td>
 			<td></td>
@@ -55,4 +51,4 @@
   });
 </script>
 
-<link rel="import" href="../components/foot-iframe.html?__inline">
+<link rel="import" href="../components/foot.html?__inline">
