--- a/menshi/new.html
+++ b/menshi/new.html
@@ -1,30 +1,35 @@
-<link rel="import" href="../components/head-iframe.html?__inline">
+<link rel="import" href="../components/head.html?__inline">
 
 <div class="container">
 	<div class="map-head"><span class="vertical-line"></span>新下发的客资</div>
+	<!-- 新消息在此追加 -->
+</div>
 
-	<div class="panel panel-primary">
+<!-- 消息模板 -->
+<div class="hidden template">
+	<div class="panel panel-primary new-customer-message-container">
 		<div class="panel-body">
 			<div class="new-customer-message row">
 				<div class="col-xs-8 info">
 					<p>发送时间：2016-09-09 18:00</p>
-					<p>来源：邀约客服-小丽</p>
+					<p>来源：抓客客服-小丽</p>
 					<p>渠道：官网-百度</p>
 				</div>
 				<div class="col-xs-4 count-down">
 					<span class="number">54</span>s
 				</div>
 				<div class="col-xs-10 col-xs-offset-1">
-					<a href="detail.html" class="btn btn-primary btn-block">接收客资</a>
+					<a href="javascript:;" class="btn btn-primary btn-block accept-customer" data-id="123232315644">接收客资</a>
 				</div>
 			</div>
 		</div>
 	</div>
-  
 </div>
 
 <script>
 	iframe.init();
 </script>
 
-<link rel="import" href="../components/foot-iframe.html?__inline">
+<script src="js/i-new.js"></script>
+
+<link rel="import" href="../components/foot.html?__inline">
