--- a/yaoyue/add.html
+++ b/yaoyue/add.html
@@ -1,157 +1,141 @@
-<link rel="import" href="../components/head-iframe.html?__inline">
+<link rel="import" href="../components/head.html?__inline">
 
 <link rel="import" href="../components/link-datepicker-head.html?__inline">
 
 <div class="container">
-	<div class="map-head"><span class="vertical-line"></span><span id="operate-text">新增</span>沟通信息</div>
-	<div class="panel panel-primary">
-		<form id="form" action="" class="form-horizontal form" role="form">
-			<div class="panel-body">
-				<div class="form-group">
-					<label class="col-xs-4 control-label no-padding-left">结婚婚期</label>
-					<div class="col-xs-8 no-padding-left">
-						<input name="weeding-date" type="text" class="form-control datepicker">
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-xs-4 control-label no-padding-left">拍摄时间</label>
-					<div class="col-xs-8 no-padding-left">
-						<input name="shooting-date" type="text" class="form-control datepicker">
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-xs-4 control-label no-padding-left">预算范围</label>
-					<div class="col-xs-8 no-padding-left">
-						<input name="balance" type="text" class="form-control">
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-xs-4 control-label no-padding-left">关系套系</label>
-					<div class="col-xs-8 no-padding-left">
-						<input name="relation" type="text" class="form-control">
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-xs-4 control-label no-padding-left">拍摄想法</label>
-					<div class="col-xs-12">
-						<textarea name="shooting-idea" class="form-control" rows="3"></textarea>
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-xs-4 control-label no-padding-left">担心问题</label>
-					<div class="col-xs-12">
-						<textarea name="worry-question" class="form-control" rows="3"></textarea>
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-xs-4 control-label no-padding-left">订单需求</label>
-					<div class="col-xs-12">
-						<textarea name="order-need" class="form-control" rows="3"></textarea>
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-xs-4 control-label no-padding-left">沟通记录</label>
-					<div class="col-xs-12">
-						<textarea name="yyrecord" class="form-control" rows="3"></textarea>
-					</div>
-				</div>
+  <div class="map-head"><span class="vertical-line"></span><span id="operate-text">新增</span>沟通信息</div>
+  <div class="panel panel-primary">
+    <form id="form" action="" class="form-horizontal form" role="form">
+      <div class="panel-body">
+        <div class="form-group">
+          <label class="col-xs-4 control-label no-padding-left">结婚婚期</label>
+          <div class="col-xs-8 no-padding-left">
+            <input name="picker_wedding_date" type="text" class="form-control datepicker" readonly="readonly">
+            <input name="wedding_date" type="hidden">
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-xs-4 control-label no-padding-left">拍摄时间</label>
+          <div class="col-xs-8 no-padding-left">
+            <input name="picker_shooting_date" type="text" class="form-control datepicker" readonly="readonly">
+            <input name="shooting_date" type="hidden">
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-xs-4 control-label no-padding-left">预算范围</label>
+          <div class="col-xs-8 no-padding-left">
+            <input name="balance" type="text" class="form-control">
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-xs-4 control-label no-padding-left">产品套系</label>
+          <div class="col-xs-8 no-padding-left">
+            <input name="relation" type="text" class="form-control">
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-xs-4 control-label no-padding-left">拍摄想法</label>
+          <div class="col-xs-12">
+            <textarea name="shooting_idea" class="form-control" rows="3"></textarea>
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-xs-4 control-label no-padding-left">担心问题</label>
+          <div class="col-xs-12">
+            <textarea name="worry_question" class="form-control" rows="3"></textarea>
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-xs-4 control-label no-padding-left">订单需求</label>
+          <div class="col-xs-12">
+            <textarea name="order_need" class="form-control" rows="3"></textarea>
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-xs-4 control-label no-padding-left">沟通记录</label>
+          <div class="col-xs-12">
+            <textarea name="yyrecord" class="form-control" rows="3"></textarea>
+          </div>
+        </div>
 
-				<div class="form-group">
-					<div class="col-xs-offset-2 col-xs-8">
-						<input type="submit" class="btn btn-primary btn-block" value="提交">
-					</div>
-				</div>
-			</div>
-		</form>
-	</div>
+        <div class="form-group">
+          <div class="col-xs-offset-2 col-xs-8">
+            <input type="submit" class="btn btn-primary btn-block" value="提交">
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
 </div>
 
 <link rel="import" href="../components/link-datepicker-foot.html?__inline">
 
 <script>
-	iframe.init();
+  iframe.init();
 </script>
 
 <script>
-	var type = request.getParam('type'),
-			customerUuid = request.getParam('id');
-		
-	if(type == 'update'){
-		$('#operate-text').text('更新');
-	}
+  var type = request.getParam('type'),
+      customerUuid = request.getParam('id');
+    
+  if(type == 'update'){
+    $('#operate-text').text('更新');
+  }
 
-	var channelLoaded = false,
-			locationLoaded = false,
-			// 用定时器检测select是否加载完成
-			isSelectLoaded = setInterval(function(){
-				if(channelLoaded && locationLoaded){
-					// 清除定时器
-					window.clearInterval(isSelectLoaded);
-					// 是更新则获取客资信息然后填充表单
-					if(type == 'update'){
-						api.getObject('BusCustomer', customerUuid, function(data){
-							if(data.retMsg == 'OK'){
-								var obj = data.retVal;
-								$('input[name=name1]').val(obj.name1);
-								$('select[name=channel_id]').val(obj.channel_id);
-								$('select[name=location_id]').val(obj.location_id);
-								$('select[name=customer_flag]').val(obj.customer_flag);
-								$('input[name=tel1]').val(obj.tel1);
-								$('input[name=wechat1]').val(obj.wechat1);
-								$('input[name=qq1]').val(obj.qq1);
-								$('input[name=name_flag]').val(obj.name_flag);
-								$('textarea[name=zkrecord]').val(obj.zkrecord);
-							}else{
-								alert(data.retMsg);
-							}
-						});
-					}			
-				}
-			}, 1000);
-
-  // 渠道
-  api.listIdAndName('BusChannel', function(options){
-    $('select[name=channel_id]').append(options);
-		channelLoaded = true;
-  });
-
-  // 地区
-  api.listIdAndName('BusLocation', function(options){
-    $('select[name=location_id]').append(options);
-		locationLoaded = true;
-  });
-  
-  // 表单提交
-  $('#form').submit(function(){
-    var params = {},
-        values = $("#form").serializeArray();
-    // 表单数据
-    $.each(values, function(index,item){
-      params[item.name] = item.value;
+  // 是更新则获取客资信息然后填充表单
+  if(type == 'update'){
+    api.getObject('BusCustomer', customerUuid, function(data){
+      if(data.retMsg == 'OK'){
+        var obj = data.retVal;
+        $('input[name=picker_wedding_date]').val(api.getFormatDate(obj.wedding_date, "yyyy-MM-dd"));
+        $('input[name=wedding_date]').val(obj.wedding_date);
+        $('input[name=picker_shooting_date]').val(api.getFormatDate(obj.shooting_time, "yyyy-MM-dd"));
+        $('input[name=shooting_date]').val(obj.shooting_time);
+        $('input[name=balance]').val(obj.str_budget);
+        $('input[name=relation]').val(obj.type_name);
+        $('textarea[name=shooting_idea]').val(obj.shoot_idea);
+        $('textarea[name=worry_question]').val(obj.care_problem);
+        $('textarea[name=order_need]').val(obj.need);
+        $('textarea[name=yyrecord]').val(obj.ykrecord);
+      }else{
+        alert(data.retMsg);
+      }
     });
-    console.log(params);
-    return false;
-		// 如果是更新
-		if(type == 'update'){
-			params['uuid'] = customerUuid;
-		}else{
-			// 非更新需要额外数据
-			params['customer_service_id'] = api.userInfo.userUuid;
-			params['zkcreate_time'] = new Date().getTime();
-			params['customer_status'] = 1;
-		}
+  }
+
+  $('#form').bootstrapValidator({
+    // live: 'disabled',
+    submitHandler: function(validator, form, submitButton) {
+      commitForm();
+    }
+  });
+
+  // 表单提交
+  function commitForm(){
+    var params = {};
+    // 表单数据
+    params['wedding_date'] = $('input[name=wedding_date]').val();
+    params['shooting_time'] = $('input[name=shooting_date]').val();
+    params['str_budget'] = $('input[name=balance]').val();
+    params['type_name'] = $('input[name=relation]').val();
+    params['shoot_idea'] = $('textarea[name=shooting_idea]').val();
+    params['care_problem'] = $('textarea[name=worry_question]').val();
+    params['need'] = $('textarea[name=order_need]').val();
+    params['yyrecord'] = $('textarea[name=yyrecord]').val();
+    // 如果是更新
+    if(type == 'update'){
+      params['uuid'] = customerUuid;
+    }
     // 调用接口
-		// window.location.href = 'add-success.html?id=1750d7af-d6e9-436a-8d81-d844fe2b275c';return false;
     api.saveObject('BusCustomer', params, function(data){
       console.log(data);
-			if(data.retMsg == 'OK'){
-				// window.location.href = 'add-success.html';
-			}else{
-				alert(data.retMsg);
-			}
+      if(data.retMsg == 'OK'){
+        api.goBack();
+      }else{
+        alert(data.retMsg);
+      }
     });
-    return false;
-  });
+  }
 </script>
 
-<link rel="import" href="../components/foot-iframe.html?__inline">
+<link rel="import" href="../components/foot.html?__inline">
