--- a/yaoyue/mine-data.html
+++ b/yaoyue/mine-data.html
@@ -1,6 +1,6 @@
-<link rel="import" href="../components/head-iframe.html?__inline">
+<link rel="import" href="../components/head.html?__inline">
 
-<p>抓客客资统计</p>
+<p>抓客客资统计(暂未完成)</p>
 <div class="btn-group btn-group-justified margin-top-10">
 	<a href="javascript:;" class="btn btn-primary date-filter-btn" data-date="today">今日</a>
 	<a href="javascript:;" class="btn btn-default date-filter-btn" data-date="this-week">本周</a>
@@ -67,4 +67,4 @@
   });
 </script>
 
-<link rel="import" href="../components/foot-iframe.html?__inline">
+<link rel="import" href="../components/foot.html?__inline">
