--- a/yaoyue/mine.html
+++ b/yaoyue/mine.html
@@ -1,19 +1,18 @@
-<link rel="import" href="../components/head-iframe.html?__inline">
+<link rel="import" href="../components/head.html?__inline">
 
 <div class="container">
 	<div class="map-head">
 		<span class="vertical-line"></span>我的
 		<div class="filter">
 			<div class="btn-group">
-				<a href="mine-data.html" target="iframe2" class="btn btn-sm btn-primary mine-btn">数据</a>
-				<a href="mine-message.html" target="iframe2" class="btn btn-sm btn-default mine-btn">消息</a>
-				<a href="mine-info.html" target="iframe2" class="btn btn-sm btn-default mine-btn">资料</a>
+				<a href="mine-info.html" target="iframe2" class="btn btn-sm btn-primary mine-btn">资料</a>
+				<a href="mine-data.html" target="iframe2" class="btn btn-sm btn-default mine-btn">数据</a>
 				<a href="mine-target.html" target="iframe2" class="btn btn-sm btn-default mine-btn">目标</a>
 			</div>
 		</div>
 	</div>
 
-	<iframe id="iframe" name="iframe2" src="mine-data.html" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+	<iframe id="iframe" name="iframe2" src="mine-info.html" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
 
 </div>
 
@@ -24,4 +23,4 @@
   });
 </script>
 
-<link rel="import" href="../components/foot-iframe.html?__inline">
+<link rel="import" href="../components/foot.html?__inline">
