--- a/yaoyue/operate-baobei.html
+++ b/yaoyue/operate-baobei.html
@@ -1,12 +1,12 @@
-<link rel="import" href="../components/head-iframe.html?__inline">
+<link rel="import" href="../components/head.html?__inline">
 
 <div class="container">
-	<div class="panel panel-success">
+	<div id="operate-msg" class="panel panel-success hidden">
 		<div class="panel-body">
 			<div class="operate-message">
-				<div class="msg">报备成功</div>
+				<div class="msg">报备成功！</div>
 				<div class="operate col-xs-10 col-xs-offset-1">
-					<a href="list.html" class="btn btn-default btn-block">保存，返回客资列表</a>
+					<a href="javascript:history.back(-1);" class="btn btn-default btn-block">保存返回</a>
 				</div>
 			</div>
 		</div>
@@ -17,4 +17,21 @@
 	iframe.init();
 </script>
 
-<link rel="import" href="../components/foot-iframe.html?__inline">
+<script>
+  var uuid = request.getParam('id');
+  api.saveObject('BusCustomer', {
+    uuid: uuid,
+    customer_user_status: 3,
+    valid_flag: 1,
+    yytime: new Date().getTime()
+  }, function(data){
+    if(data.retMsg == 'OK'){
+      $('#operate-msg').removeClass('hidden');
+      iframe.changeHeight();
+    }else{
+      alert(data.retMsg);
+    }
+  });
+</script>
+
+<link rel="import" href="../components/foot.html?__inline">
