--- a/zhuake/add.html
+++ b/zhuake/add.html
@@ -1,205 +1,297 @@
-<link rel="import" href="../components/head-iframe.html?__inline">
+<link rel="import" href="../components/head.html?__inline">
 
 <div class="container">
-	<div class="map-head"><span class="vertical-line"></span><span id="operate-text">新增</span>客资</div>
-	<div class="panel panel-primary">
-		<form id="form" action="" class="form-horizontal form" role="form">
-			<div class="panel-body">
-				<div class="form-group">
-					<label class="col-xs-4 control-label no-padding-left">
-            <span class="icon glyphicon glyphicon-search"></span> 称呼
+  <div class="map-head"><span class="vertical-line"></span><span id="operate-text">新增</span>客资</div>
+  <div class="panel panel-primary">
+    <form id="form" action="" class="form-horizontal form" role="form">
+      <div class="panel-body">
+        <div class="form-group">
+          <label class="col-xs-4 control-label no-padding-left">
+            <span class="icon iconfont icon-card"></span> 称呼
           </label>
-					<div class="col-xs-8 no-padding-left">
-						<input name="name" type="text" class="form-control">
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-xs-4 control-label no-padding-left">
-            <span class="icon glyphicon glyphicon-search"></span> 渠道
+          <div class="col-xs-8 no-padding-left">
+            <input name="name" type="text" class="form-control">
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-xs-4 control-label no-padding-left">
+            <span class="icon iconfont icon-relation"></span> 渠道
           </label>
-					<div class="col-xs-4 no-padding-left">
-						<select name="channel_id" class="form-control">
+          <div class="col-xs-4 no-padding-left">
+            <select name="channel_id" class="form-control">
             </select>
-					</div>
-					<div class="col-xs-4 no-padding-left">
-						<select name="channel_way_id" class="form-control">
+          </div>
+          <div class="col-xs-4 no-padding-left">
+            <select name="channel_way_id" class="form-control">
             </select>
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-xs-4 control-label no-padding-left">
-            <span class="icon glyphicon glyphicon-search"></span> 地区
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-xs-4 control-label no-padding-left">
+            <span class="icon iconfont icon-map"></span> 地区
           </label>
-					<div class="col-xs-8 no-padding-left">
-						<select name="location_id" class="form-control">
+          <div class="col-xs-8 no-padding-left">
+            <select name="location_id" class="form-control">
             </select>
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-xs-4 control-label no-padding-left">
-            <span class="icon glyphicon glyphicon-search"></span> 类别
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-xs-4 control-label no-padding-left">
+            <span class="icon iconfont icon-jiangzhang"></span> 类别
           </label>
-					<div class="col-xs-8 no-padding-left">
-						<select name="customer_flag" class="form-control">
+          <div class="col-xs-8 no-padding-left">
+            <select name="customer_flag" class="form-control">
               <option value="">请选择</option>
               <option value="1">A</option>
               <option value="2">B</option>
               <option value="3">C</option>
               <option value="4">D</option>
             </select>
-					</div>
-				</div>
-			</div>
-			<div class="panel-body">
-				<div class="form-group">
-					<label class="col-xs-4 control-label no-padding-left">
-            <span class="icon glyphicon glyphicon-search"></span> 手机
+          </div>
+        </div>
+      </div>
+      <div class="panel-body">
+        <div class="form-group">
+          <label class="col-xs-4 control-label no-padding-left">
+            <span class="icon iconfont icon-mobile"></span> 手机
           </label>
-					<div class="col-xs-8 no-padding-left">
-						<input name="tel" type="text" class="form-control">
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-xs-4 control-label no-padding-left">
-            <span class="icon glyphicon glyphicon-search"></span> 微信
+          <div class="col-xs-8 no-padding-left">
+            <input name="tel" type="text" class="form-control">
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-xs-4 control-label no-padding-left">
+            <span class="icon iconfont icon-wechat"></span> 微信
           </label>
-					<div class="col-xs-8 no-padding-left">
-						<input name="wechat" type="text" class="form-control">
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-xs-4 control-label no-padding-left">
-            <span class="icon glyphicon glyphicon-search"></span> Q Q
+          <div class="col-xs-8 no-padding-left">
+            <input name="wechat" type="text" class="form-control">
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-xs-4 control-label no-padding-left">
+            <span class="icon iconfont icon-qq"></span> Q Q
           </label>
-					<div class="col-xs-8 no-padding-left">
-						<input name="qq" type="text" class="form-control">
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-xs-4 control-label no-padding-left">
-            <span class="icon glyphicon glyphicon-search"></span> 身份
+          <div class="col-xs-8 no-padding-left">
+            <input name="qq" type="text" class="form-control">
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-xs-4 control-label no-padding-left">
+            <span class="icon iconfont icon-shenfenrenzheng"></span> 身份
           </label>
-					<div class="col-xs-8 no-padding-left">
-						<input name="name_flag" type="text" class="form-control">
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-xs-4 control-label">
+          <div class="col-xs-8 no-padding-left">
+            <input name="name_flag" type="text" class="form-control">
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-xs-4 control-label">
             沟通记录
           </label>
-					<div class="col-xs-12">
-						<textarea name="zkrecord" class="form-control" rows="3"></textarea>
-					</div>
-				</div>
+          <div class="col-xs-12">
+            <textarea name="zkrecord" class="form-control" rows="3"></textarea>
+          </div>
+        </div>
 
-				<div class="form-group">
-					<div class="col-xs-offset-2 col-xs-8">
-						<input type="submit" class="btn btn-primary btn-block" value="提交">
-					</div>
-				</div>
-			</div>
-		</form>
-	</div>
+        <div class="form-group">
+          <div class="col-xs-offset-2 col-xs-8">
+            <input type="submit" class="btn btn-primary btn-block" value="提交">
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
 </div>
 
 <script>
-	iframe.init();
+  iframe.init();
 </script>
 
 <script>
-	var type = request.getParam('type'),
-			customerUuid = request.getParam('id');
-		
-	if(type == 'update'){
-		$('#operate-text').text('更新');
-	}
+  var type = request.getParam('type'),
+      uuid = request.getParam('id'),
+      redirect = request.getParam('redirect'); // redirect == 'history' 时，成功后返回上一页
+    
+  if(type == 'update'){
+    $('#operate-text').text('更新');
+  }
 
-	var channelLoaded = false,
-			locationLoaded = false,
-			// 用定时器检测select是否加载完成
-			isSelectLoaded = setInterval(function(){
-				if(channelLoaded && locationLoaded){
-					// 清除定时器
-					window.clearInterval(isSelectLoaded);
-					// 是更新则获取客资信息然后填充表单
-					if(type == 'update'){
-						api.getObject('BusCustomer', customerUuid, function(data){
-							if(data.retMsg == 'OK'){
-								var obj = data.retVal;
-								$('input[name=name]').val(obj.name1);
-								$('select[name=channel_id]').val(obj.channel_id);
-								$('select[name=location_id]').val(obj.location_id);
-								$('select[name=customer_flag]').val(obj.customer_flag);
-								$('input[name=tel]').val(obj.tel1);
-								$('input[name=wechat]').val(obj.wechat1);
-								$('input[name=qq]').val(obj.qq1);
-								$('input[name=name_flag]').val(obj.name_flag);
-								$('textarea[name=zkrecord]').val(obj.zkrecord);
-							}else{
-								alert(data.retMsg);
-							}
-						});
-					}
-				}
-			}, 1000);
+  var channelLoaded = false,
+      channelWayLoaded = false,
+      locationLoaded = false,
+      updateObj = 'none',
+      // 用定时器检测select是否加载完成
+      isSelectLoaded = setInterval(function(){
+        if(channelLoaded && locationLoaded){
+          if(channelWayLoaded){
+            // 6。清除定时器
+            // 清除定时器
+            window.clearInterval(isSelectLoaded);
+          }else{
+            // 2。填充渠道
+            // 是更新则获取客资信息然后填充表单
+            if(type == 'update' && updateObj == 'none'){
+              api.getObject('BusCustomer', uuid, function(data){
+                if(data.retMsg == 'OK'){
+                  updateObj = data.retVal;
+                  $('input[name=name]').val(updateObj.name1);
+                  $('select[name=channel_id]').val(updateObj.channel_id);
+                  $('select[name=location_id]').val(updateObj.location_id);
+                  $('select[name=customer_flag]').val(updateObj.customer_flag);
+                  $('input[name=tel]').val(updateObj.tel1);
+                  $('input[name=wechat]').val(updateObj.wechat1);
+                  $('input[name=qq]').val(updateObj.qq1);
+                  $('input[name=name_flag]').val(updateObj.name_flag);
+                  $('textarea[name=zkrecord]').val(updateObj.zkrecord);
+                  // 3。渠道加载后加载方式
+                  $('select[name=channel_way_id]').val();
+                  // 渠道方式
+                  api.listIdAndName('BusChannelWay', {
+                    channel_id: updateObj.channel_id
+                  }, function(options){
+                    // 4。加载渠道方式
+                    $('select[name=channel_way_id]').html(options);
+                    // 5。改变渠道方式
+                    $('select[name=channel_way_id]').val(updateObj.channel_way_id);
+                    channelWayLoaded = true;
+                  });
+                }else{
+                  alert(data.retMsg);
+                }
+              });
+            }
+          }
+        }
+      }, 1000);
 
+  // 1。加载渠道
   // 渠道
-  api.listIdAndName('BusChannel', function(options){
+  api.listIdAndName('BusChannel', {}, function(options){
     $('select[name=channel_id]').append(options);
-		channelLoaded = true;
+    channelLoaded = true;
   });
 
-	// 渠道方式级联更改
-	$('select[name=channel_id]').change(function(){
-		$('select[name=channel_way_id]').val();
-		// 渠道方式
-		api.listIdAndNameNoToken('BusChannelWay', {
-			channel_id: $(this).val()
-		}, function(options){
-			$('select[name=channel_way_id]').html(options);
-		});
-	});
-	
-
-  // 地区
-  api.listIdAndName('BusLocation', function(options){
-    $('select[name=location_id]').append(options);
-		locationLoaded = true;
+  // 渠道方式级联更改
+  $('select[name=channel_id]').change(function(){
+    $('select[name=channel_way_id]').val('');
+    if(!$(this).val()){
+      return false;
+    }
+    // 渠道方式
+    api.listIdAndName('BusChannelWay', {
+      channel_id: $(this).val()
+    }, function(options){
+      $('select[name=channel_way_id]').html(options);
+      channelWayLoaded = true;
+    });
   });
   
+  // 地区
+  api.listIdAndName('BusLocation', {}, function(options){
+    $('select[name=location_id]').append(options);
+    locationLoaded = true;
+  });
+  
+
+  $('#form').bootstrapValidator({
+    // live: 'disabled',
+    fields: {
+      name: {
+        validators: {
+          notEmpty: {
+            message: '称呼不能为空'
+          }
+        }
+      },
+      tel: {
+        validators: {
+          notEmpty: {
+            message: '手机号不能为空'
+          },
+          // phone: {
+          //   message: '手机号不合法',
+          //   country: 'cn'
+          // }
+        }
+      },
+      channel_id: {
+        validators: {
+          notEmpty: {
+            message: '渠道不能为空'
+          }
+        }
+      },
+      // channel_way_id: {
+      //   validators: {
+      //     notEmpty: {
+      //       message: '方式不能为空'
+      //     }
+      //   }
+      // },
+      customer_flag: {
+        validators: {
+          notEmpty: {
+            message: '类别不能为空'
+          }
+        }
+      },
+      location_id: {
+        validators: {
+          notEmpty: {
+            message: '地区不能为空'
+          }
+        }
+      },
+      name_flag: {
+        validators: {
+          notEmpty: {
+            message: '身份不能为空'
+          }
+        }
+      },
+    },
+    submitHandler: function(validator, form, submitButton) {
+      commitForm();
+    }
+  });
+
   // 表单提交
-  $('#form').submit(function(){
+  function commitForm(){
     var params = {};
     // 表单数据
-		params['name1'] = $('input[name=name]').val();
-		params['channel_id'] = $('select[name=channel_id]').val();
-		params['channel_way_id'] = $('select[name=channel_way_id]').val();
-		params['location_id'] = $('select[name=location_id]').val();
-		params['customer_flag'] = $('select[name=customer_flag]').val();
-		params['tel1'] = $('input[name=tel]').val();
-		params['wechat1'] = $('input[name=wechat]').val();
-		params['qq1'] = $('input[name=qq]').val();
-		params['name_flag'] = $('input[name=name_flag]').val();
-		params['zkrecord'] = $('textarea[name=zkrecord]').val();
-		// 如果是更新
-		if(type == 'update'){
-			params['uuid'] = customerUuid;
-		}else{
-			// 非更新需要额外数据
-			params['customer_service_id'] = api.userInfo.userUuid;
-			params['zkcreate_time'] = new Date().getTime();
-			params['customer_user_status'] = 1;
-		}
+    params['name1'] = $('input[name=name]').val();
+    params['channel_id'] = $('select[name=channel_id]').val();
+    params['channel_way_id'] = $('select[name=channel_way_id]').val()?$('select[name=channel_way_id]').val():'';
+    params['location_id'] = $('select[name=location_id]').val();
+    params['customer_flag'] = $('select[name=customer_flag]').val();
+    params['tel1'] = $('input[name=tel]').val();
+    params['wechat1'] = $('input[name=wechat]').val();
+    params['qq1'] = $('input[name=qq]').val();
+    params['name_flag'] = $('input[name=name_flag]').val();
+    params['zkrecord'] = $('textarea[name=zkrecord]').val();
+    // 如果是更新
+    if(type == 'update'){
+      params['uuid'] = uuid;
+    }else{
+      // 非更新需要额外数据
+      params['customer_service_id'] = api.userInfo.userUuid;
+      params['zkcreate_time'] = new Date().getTime();
+      params['customer_user_status'] = 1;
+      params['zkdepartment_id'] = api.userInfo.departmentId;
+      params['zkworkcenter_id'] = api.userInfo.workcenterId;
+    }
     // 调用接口
     api.saveObject('BusCustomer', params, function(data){
-			if(data.retMsg == 'OK'){
-				window.location.href = 'add-success.html?id='+data.retVal.uuid;
-			}else{
-				alert(data.retMsg);
-			}
+      if(data.retMsg == 'OK'){
+        if(redirect == 'history'){
+          api.goBack();
+        } else {
+          window.location.href = 'add-success.html?id='+data.retVal.uuid;
+        }
+      }else{
+        alert(data.retMsg);
+      }
     });
-    return false;
-  });
+  }
 </script>
 
-<link rel="import" href="../components/foot-iframe.html?__inline">
+<link rel="import" href="../components/foot.html?__inline">
