--- a/zhuake/mine-target.html
+++ b/zhuake/mine-target.html
@@ -1,9 +1,54 @@
-<link rel="import" href="../components/head-iframe.html?__inline">
+<link rel="import" href="../components/head.html?__inline">
 
-target 未知界面
+<p>设置本月的目标(暂未完成)</p>
+<div class="panel panel-primary">
+  <div class="panel-body">
+    <form action="" class="form-horizontal" role="form">
+      <div class="form-group">
+        <label class="col-xs-4 control-label">目标时间</label>
+        <div class="col-xs-8">
+          <select name="time_type" class="form-control">
+            <option value="1">今日</option>
+            <option value="2">本周</option>
+            <option value="3">本月</option>
+          </select>
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="col-xs-4 control-label">我的客资数</label>
+        <div class="col-xs-8">
+          <input name="my_customer_number" type="text" class="form-control">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="col-xs-4 control-label">有效客资数</label>
+        <div class="col-xs-8">
+          <input name="validate_customer_number" type="text" class="form-control">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="col-xs-4 control-label">客资有效率</label>
+        <div class="col-xs-8">
+          <input name="validate_customer_percent" type="text" class="form-control">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="col-xs-4 control-label">客资成交数</label>
+        <div class="col-xs-8">
+          <input name="paid_customer_number" type="text" class="form-control">
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-xs-offset-2 col-xs-8">
+          <input type="submit" class="btn btn-primary btn-block" value="保存">
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
 
 <script>
-	iframe.init();
+  iframe.init();
 </script>
 
-<link rel="import" href="../components/foot-iframe.html?__inline">
+<link rel="import" href="../components/foot.html?__inline">
