--- a/zhuake/mine.html
+++ b/zhuake/mine.html
@@ -1,13 +1,12 @@
-<link rel="import" href="../components/head-iframe.html?__inline">
+<link rel="import" href="../components/head.html?__inline">
 
 <div class="container">
 	<div class="map-head">
 		<span class="vertical-line"></span>我的
 		<div class="filter">
 			<div class="btn-group">
-				<a href="mine-data.html" target="iframe2" class="btn btn-sm btn-primary mine-btn">数据</a>
-				<a href="mine-message.html" target="iframe2" class="btn btn-sm btn-default mine-btn">消息</a>
-				<a href="mine-info.html" target="iframe2" class="btn btn-sm btn-default mine-btn">资料</a>
+				<a href="mine-info.html" target="iframe2" class="btn btn-sm btn-primary mine-btn">资料</a>
+				<a href="mine-data.html" target="iframe2" class="btn btn-sm btn-default mine-btn">数据</a>
 				<a href="mine-target.html" target="iframe2" class="btn btn-sm btn-default mine-btn">目标</a>
 			</div>
 		</div>
@@ -24,4 +23,4 @@
   });
 </script>
 
-<link rel="import" href="../components/foot-iframe.html?__inline">
+<link rel="import" href="../components/foot.html?__inline">
