--- a/zhuake/operate-shanchu.html
+++ b/zhuake/operate-shanchu.html
@@ -1,8 +1,7 @@
-<link rel="import" href="../components/head-iframe.html?__inline">
+<link rel="import" href="../components/head.html?__inline">
 
 <div class="container">
-  <div class="map-head"><span class="vertical-line"></span>删除客资</div>
-  <div id="delete-msg" class="panel panel-success hidden">
+  <div id="operate-msg" class="panel panel-success hidden">
 		<div class="panel-body">
 			<div class="msg-title">删除客资成功！</div>
 			<div class="row">
@@ -22,15 +21,15 @@
 </script>
 
 <script>
-  var customerUuid = request.getParam('id');
-  api.delObject('BusCustomer', customerUuid, function(data){
-    if(data.retMsg != 'OK'){
-      alert(data.retMsg);
-    }else{
-      $('#delete-msg').removeClass('hidden');
+  var uuid = request.getParam('id');
+  api.delObject('BusCustomer', uuid, function(data){
+    if(data.retMsg == 'OK'){
+	  	$('#operate-msg').removeClass('hidden');
       iframe.changeHeight();
+    }else{
+      alert(data.retMsg);
     }
   });
 </script>
 
-<link rel="import" href="../components/foot-iframe.html?__inline">
+<link rel="import" href="../components/foot.html?__inline">
